# amcs

./: .editorconfig  README.md  requirements.txt  setup.cfg  setup.py
src/amcs1/: func.py  main.py
src/amcs2/: config.py  func.py  main.py
tests/: test_amcs1_func.py  test_amcs2_func.py
