[metadata]
name = amcs
version = 0.0
author = Yennick Schepers
license_files = LICENSE.txt
description = AMCS
description-file = README.md
home-page = https://github.com/yennicks/amcs
url = https://github.com/yennicks/amcs

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
max-line-length = 80
